service-mesh/dsav/account/dsav-account-deploy.yaml
# this file for deployment dsav-account
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dsav-account
  labels:
    app: dsav-account
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dsav-account
    spec:
      containers:
      - name: dsav-account
        image: tnindo/dsav_account:v1stag.0.18
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /go/src/account/logs
          name: account-logs
      restartPolicy: Always
      volumes:
      - name: account-logs
        hostPath:
          path: /data/digital_saving_account/logs 
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
