service-mesh/dsav/account/dsav-account-egress.yaml
# this configuration is use egress rule from account service connect to external service
# for example in this part is account service will be connect to 
# - sav-txn
# - saving-mongo
# - saving-redis

# every serviceEntry is describe with ports property ,it's mean that port will be open in service account
# so service account connect to external service at port 32104, 3004  for connection saving-txn.default-svc.cluster.local (represent host name)
# and the supported protocol is HTTP, HTTP2, TCP, MONGO 
# http2 is represent the grpc connection

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-account-egress-txn
spec:
  hosts:
    - dsav-txn.default.svc.cluster.local
  ports:
    - number: 31903
      name: dsav-txn-http
      protocol: HTTP
    - number: 31904
      name: dsav-txn-grpc
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-account-egress-mongo
spec:
  hosts:
    - dsav-mongo.default.svc.cluster.local
  ports:
    - number: 31111
      name: dsav-mongo
      protocol: MONGO
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dsav-account-egress-mongo
spec:
  hosts:
  - dsav-mongo.default.svc.cluster.local
  tcp:
  - match:
    - port: 31111
    route:
    - destination:
        host: dsav-mongo.default.svc.cluster.local
        port:
          number: 31111
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-account-egress-redis
spec:
  hosts:
    - dsav-redis.default.svc.cluster.local
  ports:
    - number: 31112
      name: dsav-redis
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-account-egress-dsav-interest
spec:
  hosts:
    - dsav-interest.default.svc.cluster.local
  ports:
    - number: 30215
      name: dsav-interest-http
      protocol: HTTP
    - number: 30225
      name: dsav-interest-grpc
      protocol: HTTP2
